--- a/react1/react2/src/Views/LoginPage/LoginPage.css
+++ b/react1/react2/src/Views/LoginPage/LoginPage.css
@@ -6,10 +6,13 @@
     --text-white: #FBFBFB;
   }
 
-
+.login-error {
+    color: var(--accent);
+  margin-bottom: 10px;
+}
 .login-page {
-    width: fit-content;
-    height: fit-content;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     border-radius: 5px;
