--- a/react1/react2/src/index.css
+++ b/react1/react2/src/index.css
@@ -2,3 +2,9 @@ html, body, #root {
   height: 100%;
   width: 100%;
 }
+* {
+  boxing-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
